fix: in react ui, improve display of masonry tiles via use of panel
- raised panel to better offset content inside tile
- improved inner scrolling, with the scrollbars hugging the perimeter of the tile
- some related improvements to display of markdown-like content inside tiles

--- a/pdl-live-react/src/view/masonry/Masonry.css
+++ b/pdl-live-react/src/view/masonry/Masonry.css
@@ -77,7 +77,6 @@
     font-size: 1.25em;
   }
   &[data-padding="s"] {
-    max-height: 20em;
     h1,
     h2,
     h3,
@@ -90,10 +89,6 @@
     }
   }
   &[data-padding="m"] {
-    max-height: 30em;
     font-size: 0.875rem !important;
-  }
-  &[data-padding="l"] {
-    max-height: 40em;
   }
 }
